--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
+    "react-howler": "^5.2.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
