--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "artroom",
   "version": "0.1.0",
-  "homepage": "https://renanrith.github.io/artroom-react/",
+  "homepage": "https://github.io/renanrith/artroom-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
