--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
     "react-burger-menu": "^3.0.8",
@@ -53,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "nodemon": "^2.0.19"
   }
 }
