--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.1.0",
     "react-howler": "^5.2.0",
     "react-icons": "^4.3.1",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.21.0",
