--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@rsuite/icons": "^1.0.2",
     "@supabase/supabase-js": "^1.35.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -32,6 +33,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.22.1",
     "sequelize": "^6.21.0",
     "sqlite3": "^5.0.8",
     "web-vitals": "^2.1.4"
