--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "artroom",
   "version": "0.1.0",
-  "homepage": "https://renanrith.github.io/artroom-react/",
+  "homepage": "https://artroom-react.vercel.app/",
   "private": true,
   "main": "server.js",
   "scripts": {
